--- a/frontend/src/app/employee-add/employee-add.component.html
+++ b/frontend/src/app/employee-add/employee-add.component.html
@@ -36,4 +36,5 @@
       </div> 
   </div>
   <button mat-raised-button style="width: 50%; background-color: lightgreen; margin: auto" (click) = "onSubmit()"> Submit </button>
+  <h2>{{msg}}</h2>
 </div>
