--- a/frontend/src/app/employee-edit/employee-edit.component.html
+++ b/frontend/src/app/employee-edit/employee-edit.component.html
@@ -1,5 +1,8 @@
 <div class="form-container">
   <h1>Edit Employee</h1>
+  <div *ngIf = "imageName" style="width: 50%; margin: auto;">
+    <img width="100%" src="http://localhost:9000/{{imageName}}">
+  </div>
   <mat-form-field>
     <input matInput placeholder="Name" [(ngModel)] = "name">
   </mat-form-field>
@@ -25,6 +28,16 @@
       <mat-option *ngFor="let skill of skillsList" [value]="skill">{{skill}}</mat-option>
     </mat-select>
   </mat-form-field>
+  <h2>Upload/Change Image</h2><input type="file" name="fileUplaod" id="fileUpload" multiple ng2FileSelect [uploader]="uploader">
+  <div>
+    <div class="row uploadList" *ngFor="let item of uploader.queue">
+        <div class="col-sm-4">{{item.file.name}}</div>
+        <div class="col-sm-4">
+                <button type="button" class="btn btn-dark" (click)="item.upload()">Upload</button>
+                <button type="button" class="btn btn-danger" (click)="item.remove()">Cancel</button>
+        </div>
+    </div>
+  </div>
 
   <button mat-raised-button style="width: 50%; background-color: lightgreen; margin: auto" (click) = "onSubmit()"> Submit </button>
   <br>
