modified setup script

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span> Employee Dashboard </span>
+  <h2 style="margin: auto; font-size: 36px;"> Employee Dashboard </h2>
     <!-- <app-navigation></app-navigation> -->
 </mat-toolbar>
 <router-outlet></router-outlet>
